[package]
name = "Helix-FFT"
version = "0.1.0"
authors = ["Nemo Andrea"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true

[dependencies]
wasm-bindgen = { version = "0.2.67", features = ["serde-serialize"] }
ndarray = "0.13.1"
serde = { version = "1.0.80", features = ["derive"] }
serde_json = "1.0.32"
serde_derive = "1.0.80"
num = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]

# disable wasm-opt for release, as it throws errors
[package.metadata.wasm-pack.profile.release]
wasm-opt = false


