[package]
name = "helixiser-interface"
version = "0.2.0"
authors = ["Nemo Andrea"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]  # required for wasm-bindgen
name = "helixiser_interface"
path = "src/lib.rs"

[profile.release]
debug = true

[dependencies]
helixiser = { path = '../helixiser' }
wasm-bindgen = { version = "0.2.67", features = ["serde-serialize"] }
ndarray = "0.13.1"
serde = { version = "1.0.80", features = ["derive"] }
serde_json = "1.0.32"
serde_derive = "1.0.80"
rustfft = "3.0.1"


[dependencies.web-sys]
version = "0.3"
features = [ "console" ]

# disable wasm-opt for release, as it throws errors
[package.metadata.wasm-pack.profile.release]
wasm-opt = false


