[package]
name = "helixiser"
version = "0.2.1"
authors = ["Nemo Andrea <nemoandrea@outlook.com>"]
edition = "2018"
description = "A crate for the calculation of diffraction patterns of helical objects"
documentation = "https://docs.rs/helixiser/"
repository  = "https://github.com/NemoAndrea/helix-fft/tree/master/wasm/helixiser"
readme      = "README.md"
categories  = ["science", "simulation","visualization","multimedia::images","mathematics"]
keywords    = ["helix", "diffraction", "wasm"]
license     = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]  # required for wasm-bindgen
name = "helixiser"
path = "src/lib.rs"
[profile.release]
debug = true

[dependencies]
ndarray = "0.13.1"
num = "0.3"
rustfft = "3.0.1"
image = "0.23.9"# only for running rust locally and debugging
open = "1.4.0"

# disable wasm-opt for release, as it throws errors
[package.metadata.wasm-pack.profile.release]
wasm-opt = false


